[2017-05-20 이경환] Home / Post 페이지 레이아웃 수정

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "1.1.2",
-    "@ionic/cli-plugin-ionic-angular": "1.1.2",
+    "@ionic/cli-plugin-cordova": "^1.1.2",
+    "@ionic/cli-plugin-ionic-angular": "^1.1.2",
     "typescript": "2.2.1"
   },
   "description": "안셈 - 질문일기 / 마음속의 생각 / 다이어리"
