--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@ionic-native/sqlite": "^3.7.0",
     "@ionic-native/status-bar": "3.7.0",
     "@ionic/storage": "2.0.1",
+    "angularfire2": "^4.0.0-rc.0",
+    "firebase": "^4.0.0",
     "ion2-calendar": "^1.0.7",
     "ionic-angular": "3.2.1",
     "ionicons": "3.0.0",
