--- a/package.json
+++ b/package.json
@@ -1,52 +1,88 @@
 {
-  "name": "ansem",
-  "version": "0.0.1",
-  "author": "breadnine",
-  "homepage": "",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.1.0",
-    "@angular/compiler": "4.1.0",
-    "@angular/compiler-cli": "4.1.0",
-    "@angular/core": "4.1.0",
-    "@angular/forms": "4.1.0",
-    "@angular/http": "4.1.0",
-    "@angular/platform-browser": "4.1.0",
-    "@angular/platform-browser-dynamic": "4.1.0",
-    "@ionic-native/admob": "^3.7.0",
-    "@ionic-native/app-rate": "^3.7.0",
-    "@ionic-native/app-version": "^3.7.0",
-    "@ionic-native/core": "3.7.0",
-    "@ionic-native/email-composer": "^3.7.0",
-    "@ionic-native/file": "^3.7.0",
-    "@ionic-native/firebase": "^3.7.0",
-    "@ionic-native/local-notifications": "^3.7.0",
-    "@ionic-native/splash-screen": "3.7.0",
-    "@ionic-native/sqlite": "^3.7.0",
-    "@ionic-native/status-bar": "3.7.0",
-    "@ionic/storage": "2.0.1",
-    "angularfire2": "^4.0.0-rc.0",
-    "firebase": "^4.0.0",
-    "ion2-calendar": "^1.0.7",
-    "ionic-angular": "3.2.1",
-    "ionicons": "3.0.0",
-    "moment": "^2.18.1",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.10"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "^1.2.1",
-    "@ionic/cli-plugin-ionic-angular": "^1.2.0",
-    "typescript": "2.2.1"
-  },
-  "description": "안셈 - 질문일기 / 마음속의 생각 / 다이어리"
+    "name": "ansem",
+    "version": "0.0.1",
+    "author": "breadnine",
+    "homepage": "",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "4.1.0",
+        "@angular/compiler": "4.1.0",
+        "@angular/compiler-cli": "4.1.0",
+        "@angular/core": "4.1.0",
+        "@angular/forms": "4.1.0",
+        "@angular/http": "4.1.0",
+        "@angular/platform-browser": "4.1.0",
+        "@angular/platform-browser-dynamic": "4.1.0",
+        "@ionic-native/admob": "^3.7.0",
+        "@ionic-native/app-rate": "^3.7.0",
+        "@ionic-native/app-version": "^3.7.0",
+        "@ionic-native/core": "3.7.0",
+        "@ionic-native/email-composer": "^3.7.0",
+        "@ionic-native/file": "^3.7.0",
+        "@ionic-native/firebase": "^3.7.0",
+        "@ionic-native/local-notifications": "^3.7.0",
+        "@ionic-native/splash-screen": "3.7.0",
+        "@ionic-native/sqlite": "^3.7.0",
+        "@ionic-native/status-bar": "3.7.0",
+        "@ionic/storage": "2.0.1",
+        "angularfire2": "^4.0.0-rc.0",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-admobpro": "~2.28.3",
+        "cordova-plugin-app-version": "~0.1.9",
+        "cordova-plugin-apprate": "~1.3.0",
+        "cordova-plugin-console": "1.0.5",
+        "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-email": "~1.2.6",
+        "cordova-plugin-file": "~4.3.3",
+        "cordova-plugin-firebase": "~0.1.20",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-statusbar": "2.2.2",
+        "cordova-plugin-whitelist": "1.3.1",
+        "cordova-sqlite-storage": "~2.0.4",
+        "de.appplant.cordova.plugin.local-notification": "~0.8.4",
+        "firebase": "^4.1.0",
+        "ion2-calendar": "^1.0.7",
+        "ionic-angular": "3.2.1",
+        "ionic-plugin-keyboard": "~2.2.1",
+        "ionicons": "3.0.0",
+        "moment": "^2.18.1",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.6.0",
+        "zone.js": "0.8.10"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "1.3.7",
+        "@ionic/cli-plugin-cordova": "^1.2.1",
+        "@ionic/cli-plugin-ionic-angular": "^1.2.0",
+        "typescript": "2.2.1"
+    },
+    "description": "안셈 - 질문일기 / 마음속의 생각 / 다이어리",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-admobpro": {},
+            "cordova-plugin-app-version": {},
+            "cordova-plugin-apprate": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-email": {},
+            "cordova-plugin-file": {},
+            "cordova-plugin-firebase": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "cordova-sqlite-storage": {},
+            "de.appplant.cordova.plugin.local-notification": {},
+            "ionic-plugin-keyboard": {}
+        },
+        "platforms": [
+            "android"
+        ]
+    }
 }
