--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/http": "4.1.0",
     "@angular/platform-browser": "4.1.0",
     "@angular/platform-browser-dynamic": "4.1.0",
-    "@ionic-native/admob-free": "^3.12.1",
+    "@ionic-native/admob-free": "^3.14.0",
     "@ionic-native/app-rate": "^3.7.0",
     "@ionic-native/app-version": "^3.7.0",
     "@ionic-native/core": "3.7.0",
@@ -59,8 +59,9 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "1.4.1",
-    "@ionic/cli-plugin-ionic-angular": "1.3.2",
+    "@ionic/cli-plugin-cordova": "1.5.0",
+    "@ionic/cli-plugin-ionic-angular": "1.4.0",
+    "ionic": "3.6.0",
     "typescript": "2.2.1"
   },
   "description": "안셈 - 마음속의 생각 / 질문일기 / 다이어리",
